#cmake_minimum_required(VERSION 3.8)
#project(forward_list)
#
#set(CMAKE_CXX_STANDARD 14)
#
#add_library(forward_list STATIC
#        ../include/forward_list/forward_list.h)
#
#target_link_libraries(forward_list)
##target_include_directories(forward_list PRIVATE
##        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/forward_list>
##        $<INSTALL_INTERFACE:include/forward_list>
##        )
##
##target_include_directories(forward_list PUBLIC
##        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
##        $<INSTALL_INTERFACE:include>
##        )
#
#
